--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 - Orangey yellow: hsl(39, 100%, 56%)
 - Green teal: hsl(166, 100%, 37%)
 - Cobalt blue: hsl(234, 85%, 45%)-->
-  <div class="div-body">
+
+  <main>
+      <div class="div-body">
     <div class="div-1">
       <div class="div-result" style="color: hsla(0, 0%, 100%, 0.6);">Your Result</div>
         <div class="circle">
@@ -40,6 +42,7 @@
       <div class="div-cont" href="#">Continue</div>
     </div>
   </div>
+  </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
