--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <main>
       <div class="div-body">
     <div class="div-1">
-      <div class="div-result" style="color: hsla(0, 0%, 100%, 0.6);">Your Result</div>
+      <div class="div-result" style="color: hsla(0, 0%, 100%, 0.6);">
+        <h1>Your Result</h1>
+      </div>
         <div class="circle">
         <span class="span-76">76</span>
 
